<resources>
    <string name="app_name">Stay on track</string>
    <string name="tasks_today">Today\'s tasks</string>
    <string name="text_task_name">Task name</string>
    <string name="save">SAVE</string>
    <string name="select_weekdays">Select weekdays</string>
    <string name="select_color">Select color</string>
    <string name="select_time">Select time</string>
    <string name="color">Color</string>
    <string name="weekdays">Weekdays</string>
    <string name="start_time">Start time</string>
    <string name="duration">Duration</string>
    <string name="edit">EDIT</string>
    <string name="message">Message</string>
    <string name="date">Date</string>
    <string name="select_date">Select date</string>
    <string name="today">Today</string>
    <string name="message_empty_title">Please specify the task`s title.\nIt would be easier to identify them.</string>
    <string name="whole_day">Whole day</string>
    <string name="day_history">Day history</string>
    <string name="remove">REMOVE</string>
    <string name="want_to_remove">Do you really want to remove it?</string>
    <string name="analytics">Analytics</string>
    <string name="home">Home</string>
    <string name="day_count">Day count</string>
    <string name="hours">Hours</string>
    <string name="month_average">Month average (%dh)</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="synchronization">Synchronization</string>
    <string name="synchronize_data">Synchronize data</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="day_count_this_year">Day count by this year</string>
    <string name="tap_to_sign_in">Tap to sign in to your Google account</string>
    <string name="tap_to_sign_out">Tap to sign out from your Google account</string>
    <string name="upload">Upload data</string>
    <string name="tap_to_upload">Tap to save your data in the cloud</string>
    <string name="download">Download data</string>
    <string name="tap_to_download">Tap to get your data from the cloud</string>
    <string name="all_tasks">All tasks</string>
    <string name="minimum_time_spent">Minimum time spent</string>
    <string name="maximum_time_spent">Maximum time spent</string>
    <string name="average_time_spent">Average time spent</string>
    <string name="item_description">%s: %s</string>
    <string name="time">%dh %02dm</string>
    <string name="timeDiff">%+dh %02dm</string>
    <string name="prize">Prize</string>
    <string name="tags">Tags</string>
    <string name="select_prize">Select prize</string>
    <string name="per_hour">Per hour</string>
    <string name="per_day">Per day</string>
    <string name="per_month">Per month</string>
    <string name="per_task">Per task</string>
    <string name="since_last_settlement">Since last settlement</string>
    <string name="amount">Amount</string>
    <string name="period">Period</string>
    <string name="select_month">Select month</string>
    <string name="salary">﹩%.2f %s</string>
    <string name="settlements">Settlements</string>
    <string name="this_week">This week</string>
    <string name="days">Days</string>
    <string name="time_spent">Time spent</string>
    <string name="average_time">Average time spent (%d%%)</string>
    <string name="assumed_time">Assumed time (%dh %02dm)</string>
    <string name="weekly">Weekly</string>
    <string name="available_day_count">Available day count</string>
    <string name="actual_day_count">Actual day count</string>
    <string name="add_settlement">Add settlement</string>
    <string name="total_time_spent">Total time spent</string>
    <string name="monthly">Monthly</string>
    <string name="add_task">Add a task</string>
    <string name="current_streak">Current streak</string>

    <plurals name="longest_streak">
        <item quantity="one">Your longest streak is currently <b>%d</b> day.</item>
        <item quantity="other">Your longest streak is currently <b>%d</b> days.</item>
    </plurals>
    <plurals name="day">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
</resources>
