<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:id="@+id/accountName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:clickable="false"
                android:focusable="false"
                android:backgroundTint="@color/colorText1"
                android:textAppearance="@style/ButtonText"
                android:layout_margin="5dp"
                android:text=""
                app:cornerRadius="30dp"/>

        <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:id="@+id/accountButtonLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:textAppearance="@style/ButtonText"
                android:layout_margin="5dp"
                android:text="@string/sign_in"
                app:cornerRadius="30dp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/synchronization"/>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:id="@+id/synchronizationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:textAppearance="@style/ButtonText"
            android:layout_margin="5dp"
            android:text="@string/synchronize_data"
            app:cornerRadius="30dp"/>

</LinearLayout>