<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_time_spent"
            android:textStyle="normal" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/dialog_background"
            android:backgroundTint="@android:color/white">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPeriod"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/this_week"
                android:textAppearance="@style/ButtonText"
                android:textColor="@color/colorText4"
                android:textSize="12sp"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_arrow_down"
                app:iconPadding="5dp"
                app:iconSize="16dp"
                app:iconTint="@color/colorText4"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@color/colorPrimaryDark" />

        <com.pointlessapss.timecontroler.views.ProgressWheel
                android:id="@+id/progress"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                app:layout_constraintBottom_toTopOf="@id/containerLegend"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:pw_color_progress="@color/colorAccentLight"
                app:pw_color_rim="@color/colorRim"
                app:pw_color_text_label="@color/colorText2"
                app:pw_color_text_value="@color/colorText1"
                app:pw_font_size_label="20sp"
                app:pw_font_size_value="40sp"
                app:pw_font_typeface="@font/lato"
                app:pw_label="@string/time_spent"
                app:pw_progress="0.74"
                app:pw_value="6h 32m"
                app:pw_width_progress="30dp" />

        <LinearLayout
                android:id="@+id/containerLegend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <View
                        android:id="@+id/indicatorAverageTime"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/ic_circle"
                        android:backgroundTint="@color/colorAccentLight" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textAverageTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/average_time"
                        android:textColor="@color/colorText4"
                        android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/ic_circle"
                        android:backgroundTint="@color/colorRim" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textAssumedTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/assumed_time"
                        android:textColor="@color/colorText4"
                        android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>