<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <FrameLayout
            android:id="@+id/optionWeekdays"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/optionStartTime"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/optionColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="196dp">

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginBottom="30dp"
                android:padding="15dp"
                android:src="@drawable/ic_weekdays"
                android:tint="@color/colorAccentLight" />

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/weekdays"
                android:textColor="@color/colorText2" />

    </FrameLayout>

    <FrameLayout
            android:id="@+id/optionColor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/optionDuration"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/optionPrize"
            app:layout_constraintStart_toEndOf="@id/optionWeekdays"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="196dp">

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginBottom="30dp"
                android:padding="15dp"
                android:src="@drawable/ic_circle"
                android:tint="@color/colorTaskDefault" />

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/color"
                android:textColor="@color/colorText2" />

    </FrameLayout>

    <FrameLayout
            android:id="@+id/optionPrize"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/optionDuration"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/optionColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="196dp">

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginBottom="30dp"
                android:padding="15dp"
                android:src="@drawable/ic_prize"
                android:tint="@color/color13" />

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/prize"
                android:textColor="@color/colorText2" />

    </FrameLayout>

    <FrameLayout
            android:id="@+id/optionStartTime"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/optionDuration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_max="196dp">

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginBottom="30dp"
                android:padding="15dp"
                android:src="@drawable/ic_time"
                android:tint="@color/color8" />

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/start_time"
                android:textColor="@color/colorText2" />

    </FrameLayout>

    <FrameLayout
            android:id="@+id/optionDuration"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/optionDate"
            app:layout_constraintStart_toEndOf="@id/optionStartTime"
            app:layout_constraintTop_toBottomOf="@id/optionColor"
            app:layout_constraintWidth_max="196dp">

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginBottom="30dp"
                android:padding="15dp"
                android:src="@drawable/ic_duration"
                android:tint="@color/color9" />

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/duration"
                android:textColor="@color/colorText2" />

    </FrameLayout>

    <FrameLayout
            android:id="@+id/optionDate"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/optionDuration"
            app:layout_constraintTop_toBottomOf="@id/optionColor"
            app:layout_constraintWidth_max="196dp">

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginBottom="30dp"
                android:padding="15dp"
                android:src="@drawable/ic_date"
                android:tint="@color/colorAccentDark" />

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/date"
                android:textColor="@color/colorText2" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>