<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background">

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/Title"
            android:id="@+id/textTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorText1"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/select_prize"/>

    <com.savvyapps.togglebuttonlayout.ToggleButtonLayout
            android:id="@+id/buttonsType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTitle"
            app:customLayout="@layout/item_toggle"
            app:allowDeselection="false"
            app:dividerColor="@color/colorRim"
            app:selectedColor="@color/colorTaskDefault"
            app:menu="@menu/prize_type_menu"
            app:cardCornerRadius="5dp"
            app:cardElevation="1px"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@android:color/white"/>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintWidth_min="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonsType"
            app:layout_constraintBottom_toTopOf="@id/buttonOk"
            app:boxStrokeColor="@color/colorTaskDefault"
            android:textColorHint="@color/colorText2"
            android:hint="@string/prize">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPrize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorText1"
                android:textSize="20sp"
                android:inputType="numberSigned|number|numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textAppearance="@style/ButtonText"
            app:layout_constraintRight_toLeftOf="@id/buttonOk"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="5dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:textColor="@color/colorText1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/remove"
            app:rippleColor="@color/colorTaskDefault"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textAppearance="@style/ButtonText"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="5dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:textColor="@color/colorText3"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@android:string/ok"
            app:rippleColor="@color/colorTaskDefault"/>

</androidx.constraintlayout.widget.ConstraintLayout>