<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background">

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/Title"
            android:id="@+id/textTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorText1"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="Title"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTitle"
            android:layout_margin="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/colorText1"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/item_description"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/cardTimeMin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardUseCompatPadding="true"
            app:cardElevation="1px"
            app:cardCornerRadius="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textTimeMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="5h 00m"
                    android:textColor="@color/colorMin"
                    android:textSize="25sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTimeMin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/minimum_time_spent"
                    android:textColor="@color/colorText2"
                    android:textSize="15sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textTimeDiffMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="-3h"
                    android:textColor="@color/colorText1"
                    android:textSize="25sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/cardTimeMax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cardTimeMin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardUseCompatPadding="true"
            app:cardElevation="1px"
            app:cardCornerRadius="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textTimeMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="9h 00m"
                    android:textColor="@color/colorMax"
                    android:textSize="25sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTimeMax"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/maximum_time_spent"
                    android:textColor="@color/colorText2"
                    android:textSize="15sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textTimeDiffMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="+1h"
                    android:textColor="@color/colorText1"
                    android:textSize="25sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>